--- a/data_download.qmd
+++ b/data_download.qmd
@@ -94,33 +94,35 @@ eighteen = StormEvents_details.ftp_v1.0_d2018_c20240716
 
 Data Cleaning 
 ```{r}
-cleaned_eight = eight %>% 
+clean_data = function(data) {
+cleaned_data = data %>% 
   filter(grepl("wind", EVENT_TYPE, ignore.case = TRUE)) %>% #filter to only wind events
   distinct() %>% #remove duplicate rows 
   select(-EVENT_NARRATIVE, -EPISODE_NARRATIVE, -END_RANGE, -END_AZIMUTH, -END_LOCATION, -BEGIN_RANGE, -BEGIN_AZIMUTH, -BEGIN_LOCATION, -TOR_F_SCALE, - TOR_LENGTH, -TOR_WIDTH, -TOR_OTHER_WFO, -TOR_OTHER_CZ_STATE, -TOR_OTHER_CZ_FIPS, -TOR_OTHER_CZ_NAME, -FLOOD_CAUSE, -SOURCE, -CZ_TIMEZONE, -CZ_TYPE, -WFO, -CZ_FIPS, -CZ_NAME, -STATE_FIPS, -EPISODE_ID, -END_DAY, - END_TIME, -END_YEARMONTH, -BEGIN_TIME, -BEGIN_DAY, -BEGIN_YEARMONTH, -DATA_SOURCE, -CATEGORY) %>%
   filter(complete.cases(EVENT_TYPE, STATE, MONTH_NAME, MAGNITUDE, BEGIN_LAT)) %>%  #remove any rows that have an na in these columns
     mutate(DAMAGE_CROPS = str_remove(DAMAGE_CROPS, "K"))  #remove K 
 
-cleaned_eight$DAMAGE_CROPS = as.numeric(cleaned_eight$DAMAGE_CROPS)
-```
+cleaned_data$DAMAGE_CROPS = as.numeric(cleaned_data$DAMAGE_CROPS)
 
-```{r}
 #change M values in damage property to K
-cleaned_eight$DAMAGE_PROPERTY = str_replace(cleaned_eight$DAMAGE_PROPERTY,  "(\\d+(\\.\\d+)?)M",  function(x) {
+cleaned_data$DAMAGE_PROPERTY = str_replace(cleaned_data$DAMAGE_PROPERTY,  "(\\d+(\\.\\d+)?)M",  function(x) {
   number = as.numeric(str_extract(x, "\\d+(\\.\\d+)?"))
  paste0(number * 10000, ".00K") })
 
-cleaned_eight = cleaned_eight %>%
+cleaned_data = cleaned_data %>%
   mutate(DAMAGE_PROPERTY = str_remove(DAMAGE_PROPERTY, "K"))
 
-cleaned_eight$DAMAGE_PROPERTY = as.numeric(cleaned_eight$DAMAGE_PROPERTY)
+cleaned_data$DAMAGE_PROPERTY = as.numeric(cleaned_data$DAMAGE_PROPERTY)
 
 #make all NA values 0 
 #assume values no filled out in this column range means no damage/deaths/injuries 
-cleaned_eight= cleaned_eight %>%
+cleaned_data= cleaned_data %>%
   mutate_at(vars(INJURIES_DIRECT:DAMAGE_CROPS), 
             ~ifelse (is.na(.) | . == "", 0, .))
-
+}
+cleaned_eight = clean_data(eight)
+cleaned_thirteen = clean_data(thirteen)
+cleaned_eighteen = clean_data(eighteen)
 ```
 
 
