--- a/ML_model.qmd
+++ b/ML_model.qmd
@@ -8,6 +8,7 @@ editor: visual
 ```{r}
 library(dplyr)
 library(tidymodels)
+library(ranger)
 
 ```
 
@@ -20,11 +21,54 @@ ML_data <- read.csv("ML_wind_data.csv")
 ML_data <- ML_data %>% select(-INJURIES_DIRECT, -INJURIES_INDIRECT, -DEATHS_DIRECT, -DEATHS_INDIRECT, -DAMAGE_PROPERTY, -DAMAGE_CROPS, -aggregate_stat)
 
 # Prepare remaining data for analysis -- make sure character strings are factors, etc.
-ML_data <- ML_data %>% mutate(STATE = as.factor(STATE), YEAR = as.factor(YEAR), MONTH_NAME = as.factor(MONTH_NAME), EVENT_TYPE = as.factor(EVENT_TYPE), MAGNITUDE_TYPE = as.factor(MAGNITUDE_TYPE))
+ML_data <- ML_data %>% mutate(STATE = as.factor(STATE), YEAR = as.factor(YEAR), MONTH_NAME = as.factor(MONTH_NAME), EVENT_TYPE = as.factor(EVENT_TYPE), MAGNITUDE_TYPE = as.factor(MAGNITUDE_TYPE), scaled_aggregate = as.factor(scaled_aggregate))
 
+ML_data <- na.omit(ML_data)
 ML_data
+
 ```
 
+Splitting the Data
+```{r}
+# Split data into training/test sets
+set.seed(1234)
+data_split <- initial_split(ML_data, prop = 3/4)
+train_data <- training(data_split)
+test_data  <- testing(data_split)
 
+# Define Recipe
+ML_recipe <- recipe(scaled_aggregate ~ ., data = train_data) %>% update_role(EVENT_ID, new_role = "ID")
+
+# Define Random Forest Model Specs
+model_spec <- rand_forest(mtry = 3, trees = 100, min_n = 5) %>%
+  set_mode("classification") %>%
+  set_engine("ranger", importance = "permutation")
+
+# Create Workflow
+ML_workflow <- workflow() %>%
+  add_recipe(ML_recipe) %>%
+  add_model(model_spec)
+
+# Train Data
+trained_model <- ML_workflow %>%
+  fit(data = train_data)
+
+# Test data on testing data
+test_predict <- predict(trained_model, new_data = test_data) %>%
+  bind_cols(test_data)
+
+# Evaluate model
+model_eval <- test_predict %>%
+  metrics(truth = scaled_aggregate, estimate = .pred_class)
+
+model_eval
+
+importance <- trained_model %>%
+  extract_fit_engine() %>%
+  ranger::importance()
+
+importance
+
+```
 
 
